--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,6 +1,8 @@
 {% block header %}
     <link rel="stylesheet" href="{{ asset("css/header.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
     <header>
+
         <a href="{{ path('app_home') }}"><img src="{{ asset('images/logo.png') }}" alt="logo"></a>
     </header>
     <section class="sidebar">
