--- a/public/css/addMatch.css
+++ b/public/css/addMatch.css
@@ -1,6 +1,5 @@
 *{
     color: black;
-
 }
 .formCreateMatch{
     background-color: rgba(255,255,255,0.7);
@@ -65,19 +64,10 @@
 
 
 .localisation{
-
+    background-color: red;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 35%;
-}
-
-.localisation>div{
-    height: 25px !important;
-    display: flex;
-    flex-direction: row;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 
@@ -95,46 +85,3 @@
 .gymnase:nth-child(1){
     background-color: green;
 }
-
-.date{
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-#create_match_date_heure_date:before{
-    content: "Jour";
-    height: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 200px;
-}
-
-#create_match_date_heure_time:before{
-    content: "Heure";
-    height: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 200px;
-}
-
-#create_match_date_heure{
-    display: flex;
-    flex-direction: column;
-}
-
-.btn{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.btn-primary{
-    background-color: forestgreen;
-    width: 50%;
-    margin-top: 20px;
-
-}
-
-
