--- a/public/css/account.css
+++ b/public/css/account.css
@@ -6,12 +6,13 @@ html, body
 body
 {
     overflow-y: hidden;
+    height: 85vh;
 }
 
 main
 {
     display: flex;
-    height: 80vh;
+    height: 85vh;
 }
 
 .select
@@ -24,7 +25,7 @@ main
     padding: 1%;
     margin: 0;
     overflow-y: scroll;
-    height: 76vh;
+    height: 85vh;
 }
 
 .content
@@ -84,8 +85,8 @@ main
     flex-basis: 80%;
     background-color: #cccccc;
     overflow-y: scroll;
-    height: auto;
-    margin-bottom: 1%;
+    height: 85vh;
+    padding-bottom: 1%;
 }
 
 .post
