--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,7 @@
+<head>
+    <link rel="stylesheet" href="{{ asset('css/footer.css') }}">
+</head>
 {% block footer %}
-        <link rel="stylesheet" href="{{ asset('css/homePage.css') }}">
         <section class="contact reveal_bottom">
             <section class="contact-container">
                 <h1>NOUS CONTACTER</h1>
