patch domicile bug for display matches

--- a/templates/match/index.html.twig
+++ b/templates/match/index.html.twig
@@ -29,7 +29,7 @@
             </article>
             <article>
                 <label for="domicile">Domicile</label>
-                <input type="checkbox" id="domicile" name="domicile" value="true">
+                <input type="checkbox" id="domicile" name="domicile">
             </article>
         </aside>
 
