--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,16 +8,18 @@
         <section class="match reveal_bottom">
             <fieldset class="nextMatch matchSection">
                 <legend><h2>Prochain match</h2></legend>
-                <article>
-                    <p class="next-match-date"></p>
-                    <section class="vsMatchSection">
-                        <p class="next-match-team1"></p>
-                        <p class="next-match-time"></p>
-                        <p class="next-match-team2"></p>
-                    </section>
-                    <p class="next-match-location"></p>
-                    <p class="next-match-remaining-time"></p>
-                </article>
+                <table>
+                    <tbody class="matchContent">
+                        <tr><td class="next-match-date" colspan="3"></td></tr>
+                        <tr>
+                            <td class="next-match-team1"></td>
+                            <td class="next-match-time"></td>
+                            <td class="next-match-team2"></td>
+                        </tr>
+                        <tr><td class="next-match-location" colspan="3"></td></tr>
+                        <tr><td class="next-match-remaining-time"colspan="3"></td></tr>
+                    </tbody>
+                </table>
             </fieldset>
 
             <section class="lastMatch matchSection">
