--- a/templates/equipe/create.html.twig
+++ b/templates/equipe/create.html.twig
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
     <link rel="stylesheet" href="{{ asset("css/addTeam.css") }}">
     <link rel="stylesheet" href="{{ asset("css/backgroundIcons.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/footer.css") }}">
     {% include 'header.html.twig' %}
     <main>
 
 
-
-    <section class="main ">
+    <section class="main">
         <section class="formCreateTeam reveal_bottom">
             <section class="logAndTitle">
                 <h1> Création d'équipe</h1>
