--- a/public/css/account.css
+++ b/public/css/account.css
@@ -17,7 +17,7 @@ main
 
 .select
 {
-    flex-basis: 20%;
+    flex-basis: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,6 +52,7 @@ main
     align-items: center;
     width: 70%;
     padding: 3%;
+
 }
 
 .element:hover, .element:active, .element:focus
@@ -64,7 +65,7 @@ main
 {
     font-size: 1.5em;
     text-align: center;
-    margin: 0 0 0 5%;
+    margin: 0 0 0 10%;
 }
 
 .element i
@@ -181,4 +182,29 @@ form input
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
     border: 1px solid rgba(0,0,0,0.1);
     transform: scale(1.1);
+}
+
+
+@media screen and (min-width: 726px) and (max-width: 1024px) {
+    .select{
+        flex-basis: 40%;
+    }
+
+    .post{
+        flex-wrap: wrap;
+    }
+
+    .about{
+        flex-basis: 85%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .post-create{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
 }
