--- a/public/css/allTeam.css
+++ b/public/css/allTeam.css
@@ -14,6 +14,10 @@
 
 }
 
+h2{
+    color: black;
+}
+
 .teamArticle:hover{
     text-decoration: none;
     background-color: rgba(255,255,255,0.8);
@@ -34,24 +38,51 @@
     color: black !important;
     text-transform: uppercase;
     transition: 0.8s;
+    padding: 10px;
 }
 
 .teamArticle img{
     max-height: 205px;
-    max-width: 314px;
+    max-width: 40%;
 }
 
 .infoSection{
     display: flex;
     flex-direction: column;
-    height: 32%;
+    height: 60%;
     justify-content: space-around;
     width: 100%;
     text-align: left;
     margin-left: 25px;
+    overflow-x: auto;
 }
 
-
+.infoSection>h2{
+    font-size: 2.5rem;
+}
 .slotSection>p{
     text-align: left;
+}
+
+@media screen and (min-width: 726px) and (max-width: 1024px) {
+
+    .main{
+        height: auto;
+    }
+
+    .allTeam{
+        width: 100%;
+        margin: 0 10px 10px 10px;
+    }
+    .teamArticle{
+        width: 75%;
+    }
+
+    .teamArticle img{
+        width: 60%;
+    }
+    .infoSection>h2{
+        font-size: 3.5rem;
+    }
+
 }
