--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -10,29 +10,35 @@
                 <a href="{{ path('app_home') }}"><h2>Accueil</h2></a>
             </div>
             <div class="tiers">
-                <a href="{{ path('app_equipe') }}"><h2>Équipes</h2></a>
+
                 {% if is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
+                    <h2>Équipes</h2>
                     <ul>
                         <li><a href="{{ path('app_equipe') }}">Afficher les équipes</a></li>
                         <li><a href="{{ path('app_equipe_add') }}">Ajouter une équipe</a></li>
                         <li><a href="{{ path('app_equipe_delete') }}">Supprimer une équipe</a></li>
                     </ul>
+                {% else %}
+                    <a href="{{ path('app_equipe') }}"><h2>Équipes</h2></a>
                 {% endif %}
             </div>
             <div class="tiers">
-                <a href="{{ path('app_match') }}"><h2>Matches</h2></a>
                 {% if is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
+                    <h2>Matches</h2>
+
                     <ul>
                         <li><a href="{{ path('app_match') }}">Afficher les matchs</a></li>
                         <li><a href="{{ path('app_match_create') }}">Ajouter un match</a></li>
                         <li><a href="{{ path('app_match_delete') }}">Supprimer un match</a></li>
                     </ul>
+                {% else %}
+                    <a href="{{ path('app_match') }}"><h2>Matches</h2></a>
                 {% endif %}
             </div>
             <div class="tiers">
                 <a href="{{ path('app_planning') }}"><h2>Planning</h2></a>
             </div>
-            <div class="tiers">
+            <div class="tiers connexion">
                 {% if is_granted('ROLE_USER') or is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
                     <h2>{{ user.pseudo }}</h2>
                     <ul>
