--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -60,7 +60,7 @@
                         </article>
                         <h1>Créer un compte</h1>
                     </a>
-                    <a href="#" class="element">
+                    <a href="{{ path('app_account_manage') }}" class="element">
                         <article>
                             <i class="bi bi-person-check"></i>
                         </article>
