--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ asset("css/loader.css") }}">
     <link rel="stylesheet" href="{{ asset("css/backgroundIcons.css") }}">
     {% include 'header.html.twig' %}
+    <p id="role" hidden> {{ user.roles[0] }}</p>
     <main>
         <section class="main ">
 
