--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="{{ asset("css/loader.css") }}">
     <link rel="stylesheet" href="{{ asset("css/backgroundIcons.css") }}">
     {% include 'header.html.twig' %}
-    <p id="role" hidden> {{ user.roles[0] }}</p>
+    {% if user %}
+        <p id="role" hidden> {{ user.roles[0] }}</p>
+    {% else %}
+        <p id="role" hidden></p>
+    {% endif %}
     <main>
         <section class="main ">
 
