start the responsive for the header

--- a/public/css/allMatches.css
+++ b/public/css/allMatches.css
@@ -95,5 +95,18 @@ article select
         min-width: 100% !important;
         max-width: 100% !important;
     }
+}
+
+
+@media screen and (max-width: 725px) {
+    main{
+        flex-direction: column;
+    }
+    .form{
+        width: 100%;
+    }
+
+
+
 
 }
