--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,200);
-
+ul {
+    padding-left: 0;
+}
 .burger{
     display: none;
 }
