--- a/public/css/allMatches.css
+++ b/public/css/allMatches.css
@@ -92,8 +92,23 @@ article select
 
 @media screen and (min-width: 726px) and (max-width: 1024px) {
     .formGetMatches select{
-        min-width: 100% !important;
-        max-width: 100% !important;
+        width: 100%;
+    }
+    main{
+        flex-direction: row;
     }
 
+}
+
+@media screen and (max-width: 725px) and (min-width: 0px){
+    main{
+        flex-direction: column !important;
+        background-color: red;
+    }
+
+    .form{
+        position: fixed;
+        width: 100%;
+
+    }
 }
