--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -11,7 +11,6 @@
                 <a href="{{ path('app_home') }}"><h2>Accueil</h2></a>
             </li>
             <li class="tiers item">
-
                 {% if is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
                     <h2>Équipes</h2>
                     <ul>
@@ -24,14 +23,13 @@
             </li>
             <li class="tiers item">
                 {% if is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
-                    <h2>Matches</h2>
-
+                    <h2>Matchs</h2>
                     <ul>
                         <li><a href="{{ path('app_match') }}">Afficher les matchs</a></li>
                         <li><a href="{{ path('app_match_create') }}">Ajouter un match</a></li>
                     </ul>
                 {% else %}
-                    <a href="{{ path('app_match') }}"><h2>Matches</h2></a>
+                    <a href="{{ path('app_match') }}"><h2>Matchs</h2></a>
                 {% endif %}
             </li>
             <li class="tiers item">
@@ -47,7 +45,7 @@
                 {% else %}
                     <h2>Mon compte</h2>
                     <ul>
-                        <li><a href="{{ path("app_login")}}">Connexion</a></li>
+                        <li><a href="{{ path("app_login") }}">Connexion</a></li>
                     </ul>
                 {% endif %}
             </li>
