--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
+{% block title %}Post n° {{ post.id }} - {{ post.author }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/handball-project/src/Controller/PostController.php'|file_link(0) }}">src/Controller/PostController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/handball-project/templates/post/index.html.twig'|file_link(0) }}">templates/post/index.html.twig</a></code></li>
-    </ul>
-</div>
+    {% include 'header.html.twig' %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Post n° {{ post.id }} - {{ post.author }} - {{ post.date|split('/').0 }}</h1>
+                {{ form_start(form) }}
+                {{ form_row(form.title) }}
+                {{ form_row(form.content) }}
+                {% set src = '/posts/images/' ~ post.urlPhoto %}
+                <label for="actualImage">Image actuelle</label>
+                <img src="{{ asset(src) }}" id="actualImage">
+                {{ form_row(form.url_photo) }}
+                <button type="submit" class="btn btn-primary">Modifier</button>
+                {{ form_end(form) }}
+                <p><a href="{{ path('app_post_pseudo',{"pseudo": user.pseudo}) }}">Retour à mes posts</a></p>
+            </div>
+        </div>
+    </div>
+    {% include 'footer.html.twig' %}
 {% endblock %}
